using CustomLib.Models.Users;

namespace CustomLib.Interfaces
{
    public interface UsersInterface : AbstractInterface<UserGet, UserPost, UserPut>
    {

    }
}
